--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <link rel="stylesheet" href="css/index.css">
   </head>
 
-  <body>
-    <h1>Random Colour</h1>
+  <body id="bodyBackground" class="body-colour">
+    <div>
+      <h1>Random Colour</h1>
+      <button id="button">Click to get a random colour</button>
+      <p id="colourCode" class="colour-code">rgb(0,0,0)</p>
+      <!--White is default-->
 
-    <button>Click to get a random colour</button>
+    </div>
+
 
     <script src="js/index.js"></script>
   </body>
